docs/cargo/debug/build/crossbeam-utils-dd5d4f3690688901/stderr
error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:18
  |
1 | pub type Probe = core::sync::atomic::AtomicU128;
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
